django/django_orm/Users with Templates/text.txt
Microsoft Windows [Version 10.0.10586]
(c) 2016 Microsoft Corporation. All rights reserved.

C:\Users\laith\Desktop\python_stack\my_environments>call djangoPy3Env\Scripts\activate

(djangoPy3Env) C:\Users\laith\Desktop\python_stack\my_environments>cd ..

(djangoPy3Env) C:\Users\laith\Desktop\python_stack>cd django

(djangoPy3Env) C:\Users\laith\Desktop\python_stack\django>cd django_or
The system cannot find the path specified.

(djangoPy3Env) C:\Users\laith\Desktop\python_stack\django>cd django_orm

(djangoPy3Env) C:\Users\laith\Desktop\python_stack\django\django_orm>django-admin startproject user

(djangoPy3Env) C:\Users\laith\Desktop\python_stack\django\django_orm>cd user

(djangoPy3Env) C:\Users\laith\Desktop\python_stack\django\django_orm\user>python manage.py startapp myapp

(djangoPy3Env) C:\Users\laith\Desktop\python_stack\django\django_orm\user>cod .
'cod' is not recognized as an internal or external command,
operable program or batch file.

(djangoPy3Env) C:\Users\laith\Desktop\python_stack\django\django_orm\user>code .

(djangoPy3Env) C:\Users\laith\Desktop\python_stack\django\django_orm\user>python manage.py makemigrations
Migrations for 'myapp':
  myapp\migrations\0001_initial.py
    - Create model user

(djangoPy3Env) C:\Users\laith\Desktop\python_stack\django\django_orm\user>python manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, myapp, sessions
Running migrations:
  Applying contenttypes.0001_initial... OK
  Applying auth.0001_initial... OK
  Applying admin.0001_initial... OK
  Applying admin.0002_logentry_remove_auto_add... OK
  Applying admin.0003_logentry_add_action_flag_choices... OK
  Applying contenttypes.0002_remove_content_type_name... OK
  Applying auth.0002_alter_permission_name_max_length... OK
  Applying auth.0003_alter_user_email_max_length... OK
  Applying auth.0004_alter_user_username_opts... OK
  Applying auth.0005_alter_user_last_login_null... OK
  Applying auth.0006_require_contenttypes_0002... OK
  Applying auth.0007_alter_validators_add_error_messages... OK
  Applying auth.0008_alter_user_username_max_length... OK
  Applying auth.0009_alter_user_last_name_max_length... OK
  Applying auth.0010_alter_group_name_max_length... OK
  Applying auth.0011_update_proxy_permissions... OK
  Applying myapp.0001_initial... OK
  Applying sessions.0001_initial... OK

(djangoPy3Env) C:\Users\laith\Desktop\python_stack\django\django_orm\user>> python manage.py shell

(djangoPy3Env) C:\Users\laith\Desktop\python_stack\django\django_orm\user>python manage.py shell
Python 3.9.5 (tags/v3.9.5:0a7dcbd, May  3 2021, 17:27:52) [MSC v.1928 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> >>> from your_app_name_here.models import *
  File "<console>", line 1
    >>> from your_app_name_here.models import *
    ^
SyntaxError: invalid syntax
>>> from myapp.models import user
>>> user.object.create(first_name ='layth',secand_name ='irshaid',email_address ='laythirshaid1998@gmail.com',age ='23')
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: type object 'user' has no attribute 'object'
>>> user.objects.create(first_name ="layth",secand_name ='irshaid',email_address ='laythirshaid1998@gmail.com',age ='23')
<user: user object (1)>
>>> user.objects.create(first_name ="huti",secand_name ='kh',email_address ='huti1998@gmail.com',age ='23')
<user: user object (2)>
>>> user.objects.create(first_name ="lana",secand_name ='th',email_address ='lana1998@gmail.com',age ='21')
<user: user object (3)>
>>> user.objects.all()
<QuerySet [<user: user object (1)>, <user: user object (2)>, <user: user object (3)>]>
>>> user.objects.last()
<user: user object (3)>
>>> user.objects.firt()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Manager' object has no attribute 'firt'
>>> user.objects.first()
<user: user object (1)>
>>> l=user.objects.get(id=3)
>>> l.secand_name='layal'
>>> l.save
<bound method Model.save of <user: user object (3)>>
>>> l=user.objects.get(id=3)
>>> l.secand_name='Pancaks'
>>> l.save
<bound method Model.save of <user: user object (3)>>
>>> l.save()
>>> user.objects.get(id=2).delete()
(1, {'myapp.user': 1})
>>> user.objects.all()
<QuerySet [<user: user object (1)>, <user: user object (3)>]>
>>>